# cea_Project

./: .dockerignore  .env.backup  .env.example  .eslintrc.dev.js  .eslintrc.json  .gitignore  ACT_COMPONENT_AUDIT_REPORT.md  ADMIN_SCHEMA_MIGRATION.md  API_ALIGNMENT_PLAN.md  AUTH_DISABLED_NOTES.md  AUTH_SOLUTION.md  BACKEND_FRONTEND_ARCHITECTURE.md  CEA_FRONTEND_SPRINT_COMPLETE.md  CEA_UI_CONSISTENCY_CRUD_ANALYSIS.md  COMPREHENSIVE_SYSTEM_STATUS.md  CORRECTED_AGENT_ARCHITECTURE.md  DATABASE_ALIGNMENT_STATUS.md  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.frontend  Dockerfile.langgraph  EDGE_FUNCTIONS_ARCHITECTURE.md  INSTALLATION_SUMMARY.md  LANGGRAPH_SETUP.md  LangGraph_Flow_Control_State_Access_Fix_Summary.md  MCP_TOOL_VERIFICATION_REPORT.md  MIGRATION_STRATEGY.md  NEXT_STEPS_SUMMARY.md  PROGRESS_ANALYSIS.md  PYDANTIC_MODELS_CRITICAL_DIFFERENCES.md  README.md  README_old.md  RESOLUTION_SUMMARY.md  SECURITY_AUDIT_COMPLETED.md  add_resume_chunks_column.sql  backend_audit.md  current_packages.txt  direct_migration.sql  docker-compose.dev.yml  (+31 more)
.cursor/: mcp.json
.langgraph_api/: .langgraph_ops.pckl  .langgraph_retry_counter.pckl
__tests__/: setup.ts
act-brand-demo/: DATABASE_INTEGRATION.md  README.md  tailwind.config.ts
app/: error.tsx  globals.css  layout.tsx  loading.tsx  next.config.js  page.tsx
backend/: CLIMATE_SUPERVISOR_WORKFLOW_DOCUMENTATION.md  COMPREHENSIVE_AGENT_TEST_ANALYSIS.md  Dockerfile  ENHANCED_AGENTS_IMPLEMENTATION_COMPLETE.md  ENHANCED_INTELLIGENCE_IMPLEMENTATION_REPORT.md  EXCEPTIONAL_AGENT_ANALYSIS_FINAL.md  README.md  cea.md  (+65 more)
(+1024 files in other folders)
